# SHIELD062626

./: .dockerignore  .env.example  .gitignore  .prettierignore  AI Prompt  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  DELIVERY_PLAN.md  IMPLEMENTATION.md  ONBOARDING.md  README.md  SECURITY.md  SHIELDv2_Master_Spec.txt  SMOKE_TEST.md  SPRINT_1.md  SPRINT_2.md  SPRINT_3.md  SPRINT_4.md  SPRINT_5.md  SPRINT_6.md  SPRINT_7.md  SPRINT_8.md  SPRINT_9.md  Shield UX fix round 6 full design update for 2.0.txt  docker-compose.demo.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: alembic.ini  demo.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0009_csf_assessment.py  0010_zt_assessment.py  0011_attack_assessment.py  0016_client_domain.py  0018_deliverable_docx.py  0019_row_locked.py  0024_csf_dimension_scores.py  0026_user_active_refresh_jti.py  0027_llm_call_client_id.py  0028_deliverable_release.py  0029_csf_gap_actions.py  0030_mfa_totp.py  0031_email_tokens.py  0032_user_keycloak_sub.py
apps/api/app/: config.py  deliverable_release.py  dependencies.py  docx_export.py  exceptions.py  main.py  provisioning.py
apps/api/app/ai/: engine.py  fixtures.py  jobs.py  llm.py  preview.py
apps/api/app/attack/: analytics.py  catalog.py  exporters.py
apps/api/app/csf/: catalog.py  exporters.py  playbook.py  playbook_export.py
apps/api/app/email/: __init__.py  sender.py  tokens.py
apps/api/app/models/: __init__.py  artifact.py  attack_assessment.py  audit_entry.py  capability.py  client.py  csf_assessment.py  csf_profile.py  deliverable.py  email_token.py  llm_call.py  risk_register.py  service.py  service_request.py  user.py  user_recovery_code.py  zt_assessment.py
apps/api/app/risk/: exporters.py
apps/api/app/routes/: admin.py  ai_preview.py  artifacts.py  attack.py  auth.py  clients.py  csf.py  deliverables.py  health.py  intake.py  messages.py  oidc.py  risk.py  tech_debt.py  zt.py
apps/api/app/schemas/: admin.py  ai.py  attack.py  auth.py  clients.py  csf.py  intake.py  message.py  risk.py  tech_debt.py  zt.py
apps/api/app/security/: email_domains.py  jwt.py  oidc.py  password.py  rate_limit.py  totp.py
apps/api/app/storage/: base.py  local.py  s3.py
apps/api/app/tech_debt/: exporters.py  extract.py  filename.py
apps/api/app/zt/: catalog.py  exporters.py  maturity.py  scoring.py
apps/api/scripts/: extract_csf_questionnaires.py  load_csf_tier_questionnaires.py  load_zt_questionnaires.py  seed_demo.py  smoke_live_ai.py
apps/api/tests/: conftest.py
apps/api/tests/live/: test_live_ai.py
apps/api/tests/unit/: test_admin_audit_viewer.py  test_admin_client_domains.py  test_admin_routes.py  test_ai_engine.py  test_ai_preview.py  test_ai_runtime_fixtures.py  test_artifacts_routes.py  test_attack_acceptance.py  test_attack_catalog.py  test_attack_draft_guard.py  test_attack_exporters.py  test_attack_routes.py  test_attack_run_ai.py  test_audit_spine.py  test_auth_reauth.py  test_auth_routes.py  test_c2_safeguards.py  test_config.py  test_csf_acceptance.py  test_csf_ai_contract.py  test_csf_catalog.py  test_csf_deliverable_routes.py  (+54 more)
(+343 files in other folders)
